--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.15MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 823c10f1-8498-4978-8706-4f02008955f0, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: ysdns.ke666.net, port: 12602, type: vmess, uuid: 6f9d9205-2b78-4e39-b791-b00296852331, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /yunsunode, ws-headers: {Host: ysdns.ke666.net}}
-  - {name: 🇻🇳 越南-4.22MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-1.80MB/s(Youtube:不良林), server: 103.151.238.37, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.151.238.37}}
-  - {name: 🇩🇪 德国-1.42MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-16.24MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇨🇳 中国-9.07MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.82MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
+  - {name: 🇬🇧 英国-3.05MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-14.45MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-11.43MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
   - {name: 🇯🇵 日本-5.13MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-321.5KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.80MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.80MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.80MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.80MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.80MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.80MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.80MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
