--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-194.0KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇨🇳 中国-13.25MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20130, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.05MB/s(Youtube:不良林), server: ysdns.ke666.net, port: 12602, type: vmess, uuid: 6f9d9205-2b78-4e39-b791-b00296852331, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /yunsunode, ws-headers: {Host: ysdns.ke666.net}}
-  - {name: 🇨🇳 中国-17.09MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20030, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.01MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20080, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-11.43MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇯🇵 日本-5.13MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-321.5KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.93MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.29MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-498.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.43MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
+  - {name: 🇨🇳 中国-13.56MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20090, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.16MB/s(Youtube:不良林), server: hk1.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk1.ningmengshui.xyz}}
+  - {name: 🇯🇵 日本-5.09MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-5.94MB/s(Youtube:不良林), server: silicon.starspace.link, port: 443, type: trojan, password: 4ZPDeqJ6g766UKDJ, sni: silicon.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-194.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-498.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-194.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-498.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-194.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-498.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-194.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-498.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-194.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-498.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-194.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-498.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-194.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-498.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
