--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇩🇪 德国-2.90MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-928.5KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 未知国家-2.03MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇯🇵 日本-4.04MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-605.4KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-407.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.57MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-177.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇭🇰 香港-2.26MB/s(Youtube:不良林), server: upp-26d.top, port: 443, type: trojan, password: s6rIg1Mkke73fwZU, sni: upp-26d.top, skip-cert-verify: true}
   - {name: 🇯🇵 日本-7.39MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc.jp.98848.xyz, port: 39813, type: vmess, uuid: fa3f6466-a3be-4e83-9f0e-f35680b2c79d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bai-piao-wang-zhe-iplc.jp.98848.xyz}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-928.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-928.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-928.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-928.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-928.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-928.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-928.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
